<resources>
    <string name="app_name">PostIt</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!-- Menu -->

    <string name="home">Home</string>
    <string name="about">About us</string>
    <string name="exit">Exit</string>

    <!-- Login -->

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>

    <!-- Register -->

    <string name="email">Email</string>
    <string name="number">Phone Number</string>
    <string name="signin">Sign In!</string>


    <!-- Home -->
    <string name="chores">Chores list</string>
    <string name="achievements">Achievements</string>
    <string name="images">Images</string>
    <string name="dates">Dates</string>
    <string name="write">Write Notes</string>
    <string name="rating">Ratings</string>


    <!-- Main -->

    <string name="ExitToast">Exiting app</string>
    <string name="title_activity_upload">UploadActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Toasts -->

    <string name="toast_changes_saved">Changes saved</string>
    <string name="toast_saved">Saved</string>
    <string name="toast_must_login">Must login</string>
    <string name="toast_date_deleted">Date deleted</string>
    <string name="toast_logged">Logged</string>
    <string name="toast_note_deleted">Note deleted</string>
    <string name="toast_rating_bar">Rating bar must be filled</string>
    <string name="toast_registered">Registered</string>
    <string name="toast_fields_filled">All fields must be filled</string>
    <string name="toast_need_login">Need to login</string>


    <!-- Change note -->
    <string name="change_note">Change note content</string>
    <string name="save_changes">Save changes</string>

    <!-- Ratings -->
    <string name="submit_rating">Submit rating</string>

    <!-- upload chore -->
    <string name="chores_name">Enter chores name</string>
    <string name="chores_desc">Enter chores description</string>
    <string name="chores_prior">Enter chores priority</string>
    <string name="save">Save</string>

    <!-- upload date -->
    <string name="date_name">Enter date name</string>
    <string name="date_format">dd/mm/yyyy</string>

    <!-- upload note -->
    <string name="note_title">Enter note title</string>
    <string name="note_content">Enter note content</string>

    <!-- item layout -->
    <string name="item_title">Title</string>

    <!-- progress -->
    <string name="loading">Loading...</string>

    <!-- about fragment -->
    <string name="students_name">Student: Antonio Perona Martínez</string>
    <string name="students_career">Telematic Engineering</string>
    <string name="students_github">Github: aperona2018</string>


</resources>