<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadActivity"
    android:background="@color/lavender">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="0dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="588dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/uploadDateImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/baseline_date_range_24" />

            <EditText
                android:id="@+id/dateTitle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:gravity="start|center_vertical"
                android:hint="@string/date_name"
                android:maxLines="1"
                android:padding="16dp"
                android:textColor="@color/lavender" />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/border"
                android:gravity="start|center_vertical"
                android:text="@string/date_format"
                android:id="@+id/textDate"
                android:textSize="18sp"
                android:padding="16dp"/>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                android:textSize="18sp"
                app:cornerRadius="20dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</ScrollView>